# github-trending-cli

./: .gitignore  README.md  pyproject.toml
GitPulse/: cli.py  config.py  formatter.py  github_api.py  utils.py
